# yeh

./: .env.yaml  .envrc  .gitignore  .sops.yaml  dune-project  flake.nix  license.txt  pyproject.toml  readme.md
lib/: config.ml  dune  hey.ml  imap.ml  protocol.ml  smtp.ml
tests/: conftest.py
tests/behavioral/: test_imap_uid_commands.py  test_server_helpers.py  test_storage_concurrency.py
tests/e2e/: test_imap_client_flow.py  test_imap_fetch_literals.py  test_server_protocol_sessions.py
tests/unit/: test_config.py  test_imap_client.py  test_routes.py  test_send.py  test_send_flow.py  test_server_parsers.py  test_server_runtime.py  test_smtp_machine.py  test_storage.py  test_sync.py
yeh/: __init__.py  __main__.py  auth.py  cli.py  config.py  hey.py  imap.py  importer.py  mailbox.py  routes.py  send.py  server.py  smtp.py  storage.py  sync.py  tui.py
